ansible/roles/k3s/bastion/files/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: drone-ingress
  namespace: default
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - drone.rbwescaledrone-dev.rbwscaws.jdxlabs.com
    secretName: letsencrypt-prod
  rules:
  - host: drone.rbwescaledrone-dev.rbwscaws.jdxlabs.com
    http:
      paths:
      - backend:
          serviceName: drone-drone
          servicePort: 80
